# notifications/models.py
@@ -1,0 +1,61 @@
+import uuid
+from django.db import models
+from django.conf import settings
+from django.contrib.contenttypes.fields import GenericForeignKey
+from django.contrib.contenttypes.models import ContentType
+
+from base.models import AbstractBaseModel
+from notifications.constants import NotificationType
+
+
+class Notification(AbstractBaseModel):
+
+    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
+
+    recipient = models.ForeignKey(
+        settings.AUTH_USER_MODEL,
+        on_delete=models.CASCADE,
+        related_name="notifications"
+    )
+
+    actor = models.ForeignKey(
+        settings.AUTH_USER_MODEL,
+        on_delete=models.SET_NULL,
+        null=True,
+        blank=True,
+        related_name="triggered_notifications"
+    )
+
+    type = models.CharField(
+        max_length=50,
+        choices=NotificationType.choices
+    )
+
+    title = models.CharField(max_length=255)
+    message = models.TextField()
+
+    entity_type = models.CharField(max_length=100, blank=True)
+    entity_id = models.UUIDField(null=True, blank=True)
+
+    metadata = models.JSONField(default=dict, blank=True)
+
+    content_type = models.ForeignKey(
+        ContentType,
+        on_delete=models.CASCADE,
+        null=True,
+        blank=True
+    )
+    object_id = models.UUIDField(null=True, blank=True)
+    content_object = GenericForeignKey("content_type", "object_id")
+
+    is_read = models.BooleanField(default=False)
+
+    class Meta:
+        db_table = "notifications"
+        ordering = ["-created_at"]
+        indexes = [
+            models.Index(fields=["recipient"]),
+            models.Index(fields=["is_read"]),
+            models.Index(fields=["created_at"]),
+            models.Index(fields=["type"]),
+        ]
